--- a/requirements.txt
+++ b/requirements.txt
@@ -6,6 +6,7 @@ certifi==2020.6.20
 cffi==1.14.2
 chardet==3.0.4
 click==7.1.2
+colorthief==0.2.1
 cryptography==3.1
 editdistance==0.5.3
 Flask==1.1.2
@@ -26,6 +27,7 @@ numpy==1.18.5
 oauthlib==3.1.0
 opencv-python==4.4.0.42
 opt-einsum==3.3.0
+Pillow==7.2.0
 protobuf==3.13.0
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
