--- a/requirements.txt
+++ b/requirements.txt
@@ -8,6 +8,7 @@ chardet==3.0.4
 click==7.1.2
 colorthief==0.2.1
 cryptography==3.1
+cycler==0.10.0
 editdistance==0.5.3
 Flask==1.1.2
 gast==0.3.3
@@ -20,9 +21,12 @@ h5py==2.10.0
 idna==2.10
 itsdangerous==1.1.0
 Jinja2==2.11.2
+Keras==2.4.3
 Keras-Preprocessing==1.1.2
+kiwisolver==1.2.0
 Markdown==3.2.2
 MarkupSafe==1.1.1
+matplotlib==3.3.2
 numpy==1.18.5
 oauthlib==3.1.0
 opencv-python==4.4.0.42
@@ -33,6 +37,9 @@ pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pycparser==2.20
 PyJWT==1.7.1
+pyparsing==2.4.7
+python-dateutil==2.8.1
+PyYAML==5.3.1
 requests==2.24.0
 requests-oauthlib==1.3.0
 rsa==4.6
